Support Drillbit stop
A collection of changes to better handle stopping drill bits. Removed
dependency on yarn-drillbit.sh script. Removed references to node
manager stop event (which is unreliable.)